fix: i18n language list and icon-button color in dark mode

--- a/client/styles.css
+++ b/client/styles.css
@@ -472,6 +472,10 @@ x-dialog a {
     background: transparent;
 }
 
+.icon-button {
+    color: var(--text-color);
+}
+
 .button:before,
 .icon-button:before {
     content: '';
